--- a/install
+++ b/install
@@ -1,8 +1,24 @@
 #!/usr/bin/env sh
 
+USR_DIRS="${USR_DIRS:-clang,ghostty,git,i3,i3-scrot,nvim,oh-my-zsh,tmux,zsh}"
+SYS_DIRS="${SYS_DIRS:-bin,fonts}"
+DOTFILES="${DOTFILES:-$HOME/.dotfiles}"
+
+sudo pacman -Scc
+sudo pacman -Sy archlinux-keyring manjaro-keyring
+sudo pacman -S linux66 linux66-headers
+sudo pacman -S linux615-headers
+reboot
 sudo pacman-mirrors --api --set-branch unstable
 sudo pacman-mirrors --fasttrack 5 && sudo pacman -Syu 
-sudo pacman -Syu --needed - < pkglist.txt
+sudo pacman -Syu --needed - < ~/.dotfiles/pkglist.txt
+
+# Required for config files
+# Python venv
+python3 -m venv .pynv
+
+# oh-my-zsh
+sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 
 if ! command -v stow >/dev/null 2>&1; then
   echo "Error: GNU Stow not found in PATH."
@@ -25,14 +41,22 @@ for dir in "${usr_dirs[@]}"; do
   stow "$dir"
 done
 
+# git
 git config --global core.excludesfile ~/.gitignore_global
+git config --global user.email "christopher.flinn@gmail.com"
+git config --global user.name "Chris Flinn"
+
+# Set zsh as default shell
+chsh -s $(which zsh)
+
+# Rust
+curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
 
 # pwndbg (https://github.com/pwndbg/pwndbg)
-git clone https://github.com/pwndbg/pwndbg
-cd pwndbg
+git clone https://github.com/pwndbg/pwndbg ~/.pwndbg
+cd ~/.pwndbg
 sudo sh setup.sh
 cd ~/
-rm -rf pwndbg
 
 # RTL8821 drivers for TP-Link AC600 Archer
 # (https://github.com/morrownr/8821au-20210708)
@@ -42,5 +66,4 @@ git clone https://github.com/morrownr/8821au-20210708
 cd  8821au-20210708
 sudo sh install-driver.sh
 cd ~/
-rm -rf pwndbg
-
+rm -rf 8821au-20210708
