--- a/install
+++ b/install
@@ -3,6 +3,18 @@
 USR_DIRS="${USR_DIRS:-clang,ghostty,git,i3,i3-scrot,nvim,oh-my-zsh,tmux,zsh}"
 SYS_DIRS="${SYS_DIRS:-bin,fonts}"
 DOTFILES="${DOTFILES:-$HOME/.dotfiles}"
+REPO_URL="https://github.com/flinnthebin/dotfiles"
+
+if [ -d "$DOTFILES" ]; then
+    echo ".dotfiles found. Pulling the latest changes..."
+    git -C "$DOTFILES" pull
+else
+    echo ".dotfiles not found. Cloning repository..."
+    mkdir -p "$DOTFILES"
+    git clone "$REPO_URL" "$DOTFILES"
+fi
+
+echo "Installing..."
 
 sudo pacman -Scc
 sudo pacman -Sy archlinux-keyring manjaro-keyring
@@ -13,41 +25,17 @@ sudo pacman-mirrors --api --set-branch unstable
 sudo pacman-mirrors --fasttrack 5 && sudo pacman -Syu 
 sudo pacman -Syu --needed - < ~/.dotfiles/pkglist.txt
 
-# Required for config files
-# Python venv
-python3 -m venv .pynv
-
-# oh-my-zsh
-sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-
-if ! command -v stow >/dev/null 2>&1; then
-  echo "Error: GNU Stow not found in PATH."
-  exit 1
-fi
-
-cd "$DOTFILES" || { echo "Error: Unable to navigate to $DOTFILES"; exit 1; }
-
-IFS=',' read -r -a sys_dirs <<< "$SYS_DIRS"
-for dir in "${sys_dirs[@]}"; do
-  echo "Stowing $dir..."
-  sudo stow -D -t / "$dir" 2>/dev/null
-  sudo stow -t / "$dir"
-done
-sudo fc-cache -fv
-IFS=',' read -r -a usr_dirs <<< "$USR_DIRS"
-for dir in "${usr_dirs[@]}"; do
-  echo "Stowing $dir..."
-  stow -D "$dir" 2>/dev/null
-  stow "$dir"
-done
-
 # git
 git config --global core.excludesfile ~/.gitignore_global
 git config --global user.email "christopher.flinn@gmail.com"
 git config --global user.name "Chris Flinn"
 
-# Set zsh as default shell
-chsh -s $(which zsh)
+# oh-my-zsh
+sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+
+# Required for config files
+# Python venv
+python3 -m venv .pynv
 
 # Rust
 curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
@@ -56,14 +44,18 @@ curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
 git clone https://github.com/pwndbg/pwndbg ~/.pwndbg
 cd ~/.pwndbg
 sudo sh setup.sh
+echo "source ~/.pwndbg/gdbinit.py" > ~/.gdbinit
 cd ~/
 
 # RTL8821 drivers for TP-Link AC600 Archer
 # (https://github.com/morrownr/8821au-20210708)
 # requires blackarch/pfring-dkms 1:3962.cb73329b-1
 
-git clone https://github.com/morrownr/8821au-20210708
-cd  8821au-20210708
-sudo sh install-driver.sh
-cd ~/
-rm -rf 8821au-20210708
+yay -S rtl8812au-dkms-git
+
+# Hardened Firefox
+wget -O "$(find ~/.mozilla/firefox -maxdepth 1 -type d -name '*.default-release')/user.js" https://raw.githubusercontent.com/arkenfox/user.js/refs/heads/master/user.js
+
+# Set zsh as default shell
+chsh -s $(which zsh)
+reboot
